# easy-events

./: README.md  distribute.sh  test.sh
python/easyevents/: README.md  __init__.py  pyproject.toml  requirements.txt
react/easy-events/: package.json
react/easy-events/src/: index.ts
test/test-api/: requirements.txt  server.py
test/test-ui/: package.json
test/test-ui/src/: App.tsx
